# tauri-plugin-notifications

./: Cargo.toml  README.md  build.rs  cspell.json  package.json
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/app/tauri/notification/: CachedKeyManager.kt  JSObjectUtils.kt  Notification.kt  NotificationPlugin.kt  NotificationStorage.kt  TauriFirebaseMessagingService.kt  TauriNotificationManager.kt  TauriUnifiedPushMessagingService.kt  UnifiedPushMessageHandler.kt  UnifiedPushNotifier.kt  UnifiedPushReceiver.kt  UnifiedPushStateStore.kt
android/src/test/java/app/tauri/notification/: JSObjectUtilsTest.kt  NotificationPluginUnifiedPushTest.kt  NotificationStorageTest.kt  TauriUnifiedPushMessagingServiceTest.kt  UnifiedPushStateStoreTest.kt
guest-js/: index.test.ts  index.ts
ios/Sources/: AppDelegateSwizzler.swift  Notification.swift  NotificationCategory.swift  NotificationHandler.swift  NotificationPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
macos/Sources/: Notification.swift
permissions/: default.toml  unified-push.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_unified_push_distributor.toml  get_unified_push_distributors.toml  register_for_unified_push.toml  save_unified_push_distributor.toml  set_action_listener_active.toml  unregister_from_unified_push.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  macos.rs  mobile.rs  models.rs  unifiedpush.rs  windows.rs
