[package]
name = "tauri-plugin-notifications"
version = "0.4.3"
authors = ["You"]
description = "A Tauri v2 plugin for sending notifications on desktop and mobile platforms with support for system notifications and push delivery via FCM, APNs, and UnifiedPush."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-notifications"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-notifications"

[features]
default = ["notify-rust"]
push-notifications = []
unified-push = []
notify-rust = ["dep:notify-rust"]

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
log = "0.4"
rand = "0.10"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.8.2", features = ["wry"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge = { version = "0.1", features = ["async"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
notify-rust = { version = "4.11", optional = true }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build = "0.1"

[dev-dependencies]
color-backtrace = "0.7"
ctor = "0.6"
maplit = "1"
